--- a/src/scss/sections/_masthead.scss
+++ b/src/scss/sections/_masthead.scss
@@ -6,7 +6,7 @@ header.masthead {
     padding-top: 10rem;
     padding-bottom: calc(10rem - #{$navbar-height});
 
-    // replace the masthead.jpg image in the /assets/img directory to change the image
+    // replace the bg-masthead.jpg image in the /assets/img directory to change the image
     // if the image name change, make sure to update the url path below!
 
     background: linear-gradient(to bottom,
