width and height for gallery images

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -105,7 +105,7 @@ html(lang='en')
                 .row.g-0
                     .col-lg-4.col-sm-6
                         a.portfolio-box(href='assets/img/portfolio/fullsize/1.webp', title='Project Name')
-                            img.img-fluid(src='assets/img/portfolio/thumbnails/1.webp', alt='...')
+                            img.img-fluid(src='assets/img/portfolio/thumbnails/1.webp', width="650" height="350", alt='...')
                             .portfolio-box-caption
                                 .project-category.text-white-50
                                     | Category
@@ -113,7 +113,7 @@ html(lang='en')
                                     | Project Name
                     .col-lg-4.col-sm-6
                         a.portfolio-box(href='assets/img/portfolio/fullsize/2.webp', title='Project Name')
-                            img.img-fluid(src='assets/img/portfolio/thumbnails/2.webp', alt='...')
+                            img.img-fluid(src='assets/img/portfolio/thumbnails/2.webp', width="650" height="350", alt='...')
                             .portfolio-box-caption
                                 .project-category.text-white-50
                                     | Category
@@ -121,7 +121,7 @@ html(lang='en')
                                     | Project Name
                     .col-lg-4.col-sm-6
                         a.portfolio-box(href='assets/img/portfolio/fullsize/3.webp', title='Project Name')
-                            img.img-fluid(src='assets/img/portfolio/thumbnails/3.webp', alt='...')
+                            img.img-fluid(src='assets/img/portfolio/thumbnails/3.webp', width="650" height="350", alt='...')
                             .portfolio-box-caption
                                 .project-category.text-white-50
                                     | Category
@@ -129,7 +129,7 @@ html(lang='en')
                                     | Project Name
                     .col-lg-4.col-sm-6
                         a.portfolio-box(href='assets/img/portfolio/fullsize/4.webp', title='Project Name')
-                            img.img-fluid(src='assets/img/portfolio/thumbnails/4.webp', alt='...')
+                            img.img-fluid(src='assets/img/portfolio/thumbnails/4.webp', width="650" height="350", alt='...')
                             .portfolio-box-caption
                                 .project-category.text-white-50
                                     | Category
@@ -137,7 +137,7 @@ html(lang='en')
                                     | Project Name
                     .col-lg-4.col-sm-6
                         a.portfolio-box(href='assets/img/portfolio/fullsize/5.webp', title='Project Name')
-                            img.img-fluid(src='assets/img/portfolio/thumbnails/5.webp', alt='...')
+                            img.img-fluid(src='assets/img/portfolio/thumbnails/5.webp', width="650" height="350", alt='...')
                             .portfolio-box-caption
                                 .project-category.text-white-50
                                     | Category
@@ -145,7 +145,7 @@ html(lang='en')
                                     | Project Name
                     .col-lg-4.col-sm-6
                         a.portfolio-box(href='assets/img/portfolio/fullsize/6.webp', title='Project Name')
-                            img.img-fluid(src='assets/img/portfolio/thumbnails/6.webp', alt='...')
+                            img.img-fluid(src='assets/img/portfolio/thumbnails/6.webp', width="650" height="350", alt='...')
                             .portfolio-box-caption.p-3
                                 .project-category.text-white-50
                                     | Category
