fix undesired black line on top of dividers

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -10858,6 +10858,7 @@ hr.divider {
   margin: 1.5rem auto;
   background-color: #f4623a;
   opacity: 1;
+  border-top: 0px solid;
 }
 
 hr.divider-light {
