--- a/src/scss/components/_dividers.scss
+++ b/src/scss/components/_dividers.scss
@@ -8,6 +8,7 @@ hr.divider {
     margin: 1.5rem auto;
     background-color: $primary;
     opacity: 1;
+    border-top: 0px solid;
 }
 
 hr.divider-light {
