--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -264,7 +264,7 @@ html(lang='en')
                     | Copyright &copy; 2023 - Company Name
 
         // Bootstrap core JS
-        script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/docs/js/bootstrap.bundle.min.js')
+        script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js')
 
         // SimpleLightbox plugin JS
         script(src='https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.14.3/simple-lightbox.min.js', fileExt='png|jpg|jpeg|gif|webp')
