--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -21,7 +21,7 @@ html(lang='en')
         link(href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic', rel='stylesheet', type='text/css')
 
         // SimpleLightbox plugin CSS
-        link(href='https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.14.3/simple-lightbox.min.css', rel='stylesheet')
+        link(href='https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css', rel='stylesheet')
 
         // Core theme CSS (includes Bootstrap)
         link(href='css/styles.css', rel='stylesheet')
@@ -104,48 +104,48 @@ html(lang='en')
             .container-fluid.p-0
                 .row.g-0
                     .col-lg-4.col-sm-6
-                        a.portfolio-box(href='assets/img/portfolio/fullsize/1.webp', width='650', height='350', title='Project Name')
-                            img.img-fluid(src='assets/img/portfolio/thumbnails/1.webp', width='650', height='350', alt='...')
+                        a.portfolio-box(href='assets/img/portfolio/fullsize/1.webp', title='Project Name')
+                            img.img-fluid(src='assets/img/portfolio/thumbnails/1.webp', alt='...')
                             .portfolio-box-caption
                                 .project-category.text-white-50
                                     | Category
                                 .project-name
                                     | Project Name
                     .col-lg-4.col-sm-6
-                        a.portfolio-box(href='assets/img/portfolio/fullsize/2.webp', width='650', height='350', title='Project Name')
-                            img.img-fluid(src='assets/img/portfolio/thumbnails/2.webp', width='650', height='350', alt='...')
+                        a.portfolio-box(href='assets/img/portfolio/fullsize/2.webp', title='Project Name')
+                            img.img-fluid(src='assets/img/portfolio/thumbnails/2.webp', alt='...')
                             .portfolio-box-caption
                                 .project-category.text-white-50
                                     | Category
                                 .project-name
                                     | Project Name
                     .col-lg-4.col-sm-6
-                        a.portfolio-box(href='assets/img/portfolio/fullsize/3.webp', width='650', height='350', title='Project Name')
-                            img.img-fluid(src='assets/img/portfolio/thumbnails/3.webp', width='650', height='350', alt='...')
+                        a.portfolio-box(href='assets/img/portfolio/fullsize/3.webp', title='Project Name')
+                            img.img-fluid(src='assets/img/portfolio/thumbnails/3.webp', alt='...')
                             .portfolio-box-caption
                                 .project-category.text-white-50
                                     | Category
                                 .project-name
                                     | Project Name
                     .col-lg-4.col-sm-6
-                        a.portfolio-box(href='assets/img/portfolio/fullsize/4.webp', width='650', height='350', title='Project Name')
-                            img.img-fluid(src='assets/img/portfolio/thumbnails/4.webp', width='650', height='350', alt='...')
+                        a.portfolio-box(href='assets/img/portfolio/fullsize/4.webp', title='Project Name')
+                            img.img-fluid(src='assets/img/portfolio/thumbnails/4.webp', alt='...')
                             .portfolio-box-caption
                                 .project-category.text-white-50
                                     | Category
                                 .project-name
                                     | Project Name
                     .col-lg-4.col-sm-6
-                        a.portfolio-box(href='assets/img/portfolio/fullsize/5.webp', width='650', height='350', title='Project Name')
-                            img.img-fluid(src='assets/img/portfolio/thumbnails/5.webp', width='650', height='350', alt='...')
+                        a.portfolio-box(href='assets/img/portfolio/fullsize/5.webp', title='Project Name')
+                            img.img-fluid(src='assets/img/portfolio/thumbnails/5.webp', alt='...')
                             .portfolio-box-caption
                                 .project-category.text-white-50
                                     | Category
                                 .project-name
                                     | Project Name
                     .col-lg-4.col-sm-6
-                        a.portfolio-box(href='assets/img/portfolio/fullsize/6.webp', width='650', height='350', title='Project Name')
-                            img.img-fluid(src='assets/img/portfolio/thumbnails/6.webp', width='650', height='350', alt='...')
+                        a.portfolio-box(href='assets/img/portfolio/fullsize/6.webp', title='Project Name')
+                            img.img-fluid(src='assets/img/portfolio/thumbnails/6.webp', alt='...')
                             .portfolio-box-caption.p-3
                                 .project-category.text-white-50
                                     | Category
@@ -267,7 +267,7 @@ html(lang='en')
         script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js')
 
         // SimpleLightbox plugin JS
-        script(src='https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.14.3/simple-lightbox.min.js', fileExt='png|jpg|jpeg|gif|webp')
+        script(src='https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.js', rel="stylesheet")
 
         // Core theme JS
         script(src='js/scripts.js')
