--- a/src/scss/variables/_typography.scss
+++ b/src/scss/variables/_typography.scss
@@ -9,8 +9,8 @@
     font-weight: 400;
     font-style: normal;
     font-display: swap;
-    src: url('../assets/fonts/webfonts/Merriweather[opsz,wdth,wght].woff2') format('woff2'),
-    url('../assets/fonts/variable/Merriweather[opsz,wdth,wght].ttf') format('truetype');
+    src: url('../assets/fonts/webfonts/Merriweather-Regular.woff2') format('woff2'),
+    url('../assets/fonts/ttf/Merriweather-Regular.ttf') format('truetype');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
   }
 
@@ -18,9 +18,9 @@
     font-family: 'Merriweather Sans';
     font-style: italic;
     font-weight: 400;
-    font-style: sans;
+    font-style: normal;
     font-display: swap;
-    src: url('../assets/fonts/variable/MerriweatherSans[wght].ttf') format('truetype');
+    src: url('../assets/fonts/ttf/MerriweatherSans-Regular.ttf') format('truetype');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
   }
 
