--- a/src/pug/publications.pug
+++ b/src/pug/publications.pug
@@ -21,37 +21,23 @@ html(lang='en')
 
     body#page-top
 
-        // Navigation
-        nav#mainNav.navbar.navbar-expand-lg.navbar-light.fixed-top.py-3
-            .container.px-4.px-lg-5
-                a.navbar-brand(href='#page-top') Start Bootstrap
-                button.navbar-toggler.navbar-toggler-right(type='button', data-bs-toggle='collapse', data-bs-target='#navbarResponsive', aria-controls='navbarResponsive', aria-expanded='false', aria-label='Toggle navigation')
-                    span.navbar-toggler-icon
-                #navbarResponsive.collapse.navbar-collapse
-                    ul.navbar-nav.ms-auto.my-2.my-lg-0
-                        li.nav-item
-                            a.nav-link(href='#about') About
-                        li.nav-item
-                            a.nav-link(href='#services') Services
-                        li.nav-item
-                            a.nav-link(href='#portfolio') Portfolio
-                        li.nav-item
-                            a.nav-link(href='#contact') Contact
-
-        // Masthead
-        header.masthead
-            .container.px-4.px-lg-5.h-100
-                .row.gx-4.gx-lg-5.h-100.align-items-center.justify-content-center.text-center
-                    .col-lg-8.align-self-end
-                        h1.text-white.font-weight-bold Your Favorite Place for Free Bootstrap Themes
-                        hr.divider
-                    .col-lg-8.align-self-baseline
-                        p.text-white-75.mb-5
-                            | Start Bootstrap can help you build better websites using the Bootstrap framework! Just download a theme and start customizing, no strings attached!
-                        a.btn.btn-primary.btn-xl(href='#about') Find Out More
-
-        // About
         section#about.page-section.bg-primary
+            // Navigation
+            nav#specialNav.navbar.navbar-expand-lg.navbar-light.fixed-top.py-3
+                .container.px-4.px-lg-5
+                    a.navbar-brand(href='#page-top') Start Bootstrap
+                    button.navbar-toggler.navbar-toggler-right(type='button', data-bs-toggle='collapse', data-bs-target='#navbarResponsive', aria-controls='navbarResponsive', aria-expanded='false', aria-label='Toggle navigation')
+                        span.navbar-toggler-icon
+                    #navbarResponsive.collapse.navbar-collapse
+                        ul.navbar-nav.ms-auto.my-2.my-lg-0
+                            li.nav-item
+                                a.nav-link(href='#about') About
+                            li.nav-item
+                                a.nav-link(href='#services') Services
+                            li.nav-item
+                                a.nav-link(href='#portfolio') Portfolio
+                            li.nav-item
+                                a.nav-link(href='#contact') Contact
             .container.px-4.px-lg-5
                 .row.gx-4.gx-lg-5.justify-content-center
                     .col-lg-8.text-center
