--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -29,3 +29,33 @@
     padding: 25px;
     width: 100%;
 }
+
+.card {
+    .card-olverlay {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        border-radius: 10rem;
+
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+
+        text-align: center;
+        opacity: 0;
+
+        color: $white;
+        background: fade-out(white, 0.2);
+        transition: opacity 0.2s ease;
+        text-align: center;
+    }
+
+    &:hover {
+        .card-olverlay {
+            opacity: 1;
+        }
+    }
+}
