--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -16,6 +16,7 @@
 @import "./components/dividers.scss";
 @import "./components/navbar.scss";
 @import "./components/bootstrap-icons.scss";
+@import "./components/cards.scss";
 
 // Sections
 @import "./sections/masthead.scss";
