--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -94,7 +94,7 @@
     }
 }
 
-#specialNav {
+#lightNav {
     box-shadow: $box-shadow;
     background-color: $white;
     transition: background-color 0.2s ease;
@@ -142,6 +142,71 @@
             .nav-item {
                 .nav-link {
                     color: $gray-900;
+                    padding: 0 1rem;
+
+                    &:hover {
+                        color: $primary;
+                    }
+                }
+
+                &:last-child {
+                    .nav-link {
+                        padding-right: 0;
+                    }
+                }
+            }
+        }
+    }
+}
+
+#darkNav {
+    box-shadow: $box-shadow;
+    background-color: $gray-900;
+    transition: background-color 0.2s ease;
+
+    .navbar-brand {
+        font-family: $font-family-sans-serif;
+        font-weight: $font-weight-bold;
+        color: $white;
+    }
+
+    .navbar-nav {
+        .nav-item {
+            .nav-link {
+                color: $gray-300;
+                font-family: $font-family-sans-serif;
+                font-weight: $font-weight-bold;
+                font-size: 0.9rem;
+                padding: 0.75rem 0;
+
+                &:hover,
+                &:active {
+                    color: $primary;
+                }
+
+                &.active {
+                    color: $primary !important;
+                }
+            }
+        }
+    }
+
+    @include media-breakpoint-up(lg) {
+        box-shadow: $box-shadow;
+        background-color: $gray-900;
+
+        .navbar-brand {
+            color: $white;
+
+            &:hover {
+                color: $primary;
+            }
+        }
+
+        .navbar-nav {
+            .nav-item {
+                .nav-link {
+                    color: $white;
                     padding: 0 1rem;
 
                     &:hover {
