--- a/src/pug/publications_dark.pug
+++ b/src/pug/publications_dark.pug
@@ -40,7 +40,7 @@ html(lang='en')
                                 a.nav-link(href='#contact') Contact
             .container.px-4.px-lg-5
                 h2.text-center.mt-0 Some slides
-                hr.divider
+                hr.divider.divider-light
                 h5.text-center Some text
                 .row.row-cols-1.row-cols-md-2.row-cols-xxl-4.gx-5.gy-4.my-4
                     .col
