--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -93,7 +93,7 @@ html(lang='en')
                             p.text-muted.mb-0 Is it really open source if it's not made with love?
 
         // Portfolio
-        #portfolio
+        #portfolio.bg-dark
             .container-fluid.p-0
                 .row.g-0
                     .col-lg-4.col-sm-6
@@ -251,13 +251,13 @@ html(lang='en')
                         div +1 (555) 123-4567
 
         // Footer
-        footer.bg-light.py-5
+        footer.py-5
             .container.px-4.px-lg-5
                 .small.text-center.text-muted
                     | Copyright &copy; 2023 - Company Name
 
         // Bootstrap core JS
-        script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js')
+        script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js')
 
         // SimpleLightbox plugin JS
         script(src='js/simpleLightbox.min.js', rel="stylesheet")
