load dark mode switch at head

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -8,6 +8,9 @@ html(lang='en')
         meta(name='description', content='')
         meta(name='author', content='')
 
+        // Core theme JS
+        script(src='js/darkmode.js')
+
         title Creative - Start Bootstrap Theme
 
         // Favicon
