--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -12089,6 +12089,9 @@ hr.divider-light {
   font-weight: 700;
   color: var(--bs-text-primary);
 }
+#mainNav .navbar-brand:hover {
+  color: #dd3300;
+}
 #mainNav .navbar-nav .nav-item .nav-link {
   color: var(--bs-text-primary);
   font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
