--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -11,6 +11,10 @@
         font-family: $font-family-sans-serif;
         font-weight: $font-weight-bold;
         color: var(--bs-text-primary);
+
+        &:hover {
+            color: $primary;
+        }
     }
 
     .navbar-nav {
