completely shadow background image for better contrast

--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -4,7 +4,7 @@
 
 //- Override and add to color system
 $orange: #dd3300;
-$brown: #5c4d42;
+$brown: black;
 
 //- Override primary color
 $primary: $orange;
