add borders to dark section for better looks in dark mode

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -149,7 +149,7 @@ html(lang='en')
                                     | Project Name
 
         // Call to action
-        section.page-section.bg-dark.text-white
+        section.page-section.bg-dark.text-white.border-bottom.border-top.border-primary.border-3
             .container.px-4.px-lg-5.text-center
                 h2.mb-4 Free Download at Start Bootstrap!
                 a.btn.btn-light.btn-xl(href='https://startbootstrap.com/theme/creative/') Download Now!
