add my contact info

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -154,6 +154,38 @@ html(lang='en')
                 h2.mb-4 Free Download at Start Bootstrap!
                 a.btn.btn-light.btn-xl(href='https://startbootstrap.com/theme/creative/') Download Now!
 
+        // contact
+        section#contact.page-section
+            .container.px-4.px-lg-5
+                h2.text-center.mt-0 How to reach me
+                hr.divider
+                .row.gx-4.gx-lg-5.justify-content-center
+                    .col-lg-3.col-md-4.text-center
+                        .mt-3
+                            .mb-2
+                                i.bi-envelope-at.fs-1.text-primary
+                            h4.mb-2 Email me
+                            a.mb-0(href="mailto:fmuro@us.es") fmuro@us.es
+                    .col-lg-3.col-md-4.text-center
+                        .mt-3
+                            .mb-2
+                                i.bi-geo-alt.fs-1.text-primary
+                            h4.mb-2 Come visit me
+                            p.text-muted.mb-0 
+                            a(href="https://maps.app.goo.gl/eH7N9wsMEnoseR3o8") Get Google directions.<br>
+                            | I'm at the Faculty of Mathematics building, first floor, central aisle, office 9.<br>
+                    .col-lg-3.col-md-4.text-center
+                        .mt-3
+                            .mb-2
+                                i.bi-building.fs-1.text-primary
+                            h4.mb-2 Send me a letter
+                            p.text-muted.mb-0
+                            a(href="https://www.us.es") Universidad de Sevilla<br>
+                            a(href="https://matematicas.us.es") Facultad de Matemáticas<br>
+                            a(href="http://www.algebra.us.es") Departamento de Álgebra<br>
+                            | Calle Tarfia s/n<br>
+                            | 41012 Sevilla, Spain
+
         // Footer
         footer.py-5
             .container.px-4.px-lg-5
