Revert "better orange for black and white contrast"
This reverts commit e0f4597f17bbafc4a064576b7ab3fcca3d5b5929.

--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -3,8 +3,8 @@
 // 
 
 //- Override and add to color system
-$orange: #dd3300;
-$brown: black;
+$orange: #f4623a;
+$brown: #5c4d42;
 
 //- Override primary color
 $primary: $orange;
