Revert "better orange for black and white contrast"
This reverts commit e0f4597f17bbafc4a064576b7ab3fcca3d5b5929.

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -12090,7 +12090,7 @@ hr.divider-light {
   color: var(--bs-text-primary);
 }
 #mainNav .navbar-brand:hover {
-  color: #dd3300;
+  color: #f4623a;
 }
 #mainNav .navbar-nav .nav-item .nav-link {
   color: var(--bs-text-primary);
@@ -20372,7 +20372,7 @@ hr.divider-light {
 header.masthead {
   padding-top: 10rem;
   padding-bottom: calc(10rem - 4.5rem);
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.8) 100%), url("../assets/img/bg-masthead_576w.webp");
+  background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url("../assets/img/bg-masthead_576w.webp");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -20383,7 +20383,7 @@ header.masthead h1, header.masthead .h1 {
 }
 @media (min-width: 768px) {
   header.masthead {
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.8) 100%), url("../assets/img/bg-masthead_768w.webp");
+    background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url("../assets/img/bg-masthead_768w.webp");
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: scroll;
@@ -20396,7 +20396,7 @@ header.masthead h1, header.masthead .h1 {
     min-height: 40rem;
     padding-top: 4.5rem;
     padding-bottom: 0;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.8) 100%), url("../assets/img/bg-masthead_992w.webp");
+    background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url("../assets/img/bg-masthead_992w.webp");
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: scroll;
@@ -20411,7 +20411,7 @@ header.masthead h1, header.masthead .h1 {
 }
 @media (min-width: 1200px) {
   header.masthead {
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.8) 100%), url("../assets/img/bg-masthead_1200w.webp");
+    background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url("../assets/img/bg-masthead_1200w.webp");
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: scroll;
@@ -20423,7 +20423,7 @@ header.masthead h1, header.masthead .h1 {
 }
 @media (min-width: 1400px) {
   header.masthead {
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.8) 100%), url("../assets/img/bg-masthead_1400w.webp");
+    background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url("../assets/img/bg-masthead_1400w.webp");
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: scroll;
