--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -190,7 +190,11 @@ html(lang='en')
         footer.py-5
             .container.px-4.px-lg-5
                 .small.text-center.text-muted
-                    | Copyright &copy; 2023 - Company Name
+                    | Copyright &copy; 2024 - Fernando Muro. Powered by
+                    a(href='https://startbootstrap.com') Start Bootstrap
+                    | with
+                    a(href='https://startbootstrap.com/theme/creative') Creative
+                    | theme.
 
         // Bootstrap core JS
         script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js')
